# File_downloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml
api/: apps.py  models.py  tasks.py  urls.py
api/migrations/: 0001_initial.py
backend/: Dockerfile  Makefile  db.sqlite3  manage.py  pyproject.toml
backend/api/: serializers.py  signals.py  tasks.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/tests/: test_models.py  test_signals.py  test_tasks.py  test_urls.py  test_views.py
backend/config/: settings.py
config/: settings.py
infra/: .env  Makefile  docker-compose.yml
infra/nginx/: default.conf
